frontend/test/context/success/shadow-globaldef-with-vardef.fc
int g = 1;

void foo() {
    bool g = true;
}
