frontend/test/context/error/redefined-globaldec.fc
extern int g;

bool g = true;
